# trdp-mirror

./: BugTracking.xls  Doxyfile  Makefile  Makefile_Ladder  Makefile_MDLadder  Makefile_SE  Makefile_TAUL  Makefile_TAUL_library  Makefile_xml
1.2.0.0/: Makefile_MDLadder
VSExpress2015/: Win_TRDP_VS2015.sln
VisualC/: Win32TRDP_VS2010.sln
config/: LINUX_ARM_OTN_config  LINUX_PPC_config  LINUX_TSN_config  LINUX_X86_64_HP_config  LINUX_X86_64_config  LINUX_X86_config  OSX_X86_64_config  OSX_X86_config  POSIX_X86_config  VXWORKS_KMODE_PPC_config  VXWORKS_PPC_config  buildsettings_posix_TEMPLATE  buildsettings_vxworks_TEMPLATE  trdp-config.xsd
db/: uuid
doc/: TCN-TRDP1-A-BOM-008-07 - Coding Rules.doc  TCN-TRDP1-D-BOM-003-07 - SyRS TRDP.doc  memory.xls
example/: echoCallback.c  echoPolling.c  echoSelect.c  echoSelectcmdline.c  example.xml  interoperability_test.xml  mdManager.c  mdManagerTCP.c  mdManagerTCP_Siemens.c  receiveHello.c  sendData.c  sendHello.c
test/: getStats.c  getStatsMarshall.c  ladderApplication_multiPD.c  ladderApplication_publisher.c  ladderApplication_subscriber.c  pdPull.c  test_client_main1.c  test_client_main20.c  test_marshalling.c  test_marshalling2.c  test_mdSingle.c  (+5 more)
trdp/spy/src/trdp_spy/: CMakeLists.txt  Makefile  Makefile.am  Makefile.common  Makefile.nmake  README.txt  build-1_8_3.bat  build.bat  lookuptype.c  lookuptype.h  moduleinfo.h  moduleinfo.nmake  packet-trdp_spy.c  packet-trdp_spy.cpp  packet-trdp_spy.h  parsebody.c  parsebody.h  trdpConfigHandler.h  trdp_env.c  trdp_env.h
trdp/spy/src/trdp_spy/doc/custom/: docstart.tex
(+678 files in other folders)
